--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,4 +1,6 @@
-*, *::before, *::after {
+*,
+*::before,
+*::after {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
@@ -36,10 +38,10 @@ body {
 .btn {
   display: inline-block;
   padding: 1rem 1.5rem;
-  margin: .5rem;
+  margin: 0.5rem;
   background-color: hsl(150, 80%, 40%);
   color: white;
-  border-radius: .5rem;
+  border-radius: 0.5rem;
   text-decoration: none;
   font-weight: 700;
   font-size: 1.25rem;
@@ -56,7 +58,7 @@ body {
   font-size: 1.75rem;
   padding: 1rem;
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
-  border-radius: .5rem;
+  border-radius: 0.5rem;
   background-color: #121212;
   color: #eeeeee;
   border: none;
@@ -80,18 +82,18 @@ body {
 
 .search-result {
   display: flex;
-  margin: .5rem;
+  margin: 0.5rem;
   align-items: center;
   background-color: #000a;
   padding: 1rem;
-  border-radius: .5rem;
+  border-radius: 0.5rem;
   cursor: pointer;
 }
 
 .search-result img {
   height: "64px";
   aspect-ratio: 1;
-  border-radius: .5rem;
+  border-radius: 0.5rem;
 }
 
 .track-info {
@@ -103,12 +105,12 @@ body {
 }
 
 .track-artists {
-  font-size: .8em;
+  font-size: 0.8em;
   color: #bbb;
 }
 
 .track-artists span {
-  margin-right: .75rem;
+  margin-right: 0.75rem;
 }
 
 .lyrics-wrapper {
@@ -122,7 +124,10 @@ body {
   padding: 2rem;
   padding-bottom: 5rem;
   text-align: center;
-  background: linear-gradient(hsl(var(--secondary-color), 60%, 50%, 80%), hsl(var(--base-color), 60%, 50%, 80%));
+  background: linear-gradient(
+    hsl(var(--secondary-color), 60%, 50%, 80%),
+    hsl(var(--base-color), 60%, 50%, 80%)
+  );
   border-radius: 2rem;
   width: 90%;
   text-shadow: 0 0 1rem #000a;
@@ -140,7 +145,6 @@ body {
 
 .reveal {
   transform: translateY(0);
-  transition: transform 200ms ease-in-out;
 }
 
 .lyrics::-webkit-scrollbar,
@@ -167,7 +171,7 @@ body {
   padding: 1rem 2rem;
   position: fixed;
   bottom: 0;
-  box-shadow: 0 0 .5rem 0 black;
+  box-shadow: 0 0 0.5rem 0 black;
   display: flex;
   justify-content: center;
 }
@@ -176,7 +180,7 @@ body {
   max-width: 1200px;
 }
 
-@media ( width < 770px) {
+@media (width < 770px) {
   .lyrics {
     height: 88%;
   }
