--- a/client/src/index.css
+++ b/client/src/index.css
@@ -65,11 +65,11 @@ body {
 }
 
 .search:hover {
-  border: 2px solid #999;
+  outline: 2px solid #999;
 }
 
 .search:focus {
-  border: 2px solid #eeeeee;
+  outline: 2px solid #eeeeee;
 }
 
 .results {
