Modify focus state for search-result items

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -90,6 +90,10 @@ body {
   cursor: pointer;
 }
 
+.search-result:focus {
+  outline: 2px solid #eeeeee;
+}
+
 .search-result img {
   height: "64px";
   aspect-ratio: 1;
