--- a/client/src/index.css
+++ b/client/src/index.css
@@ -15,8 +15,8 @@
 }
 
 body {
-  height: 100svh;
-  padding: 1rem;
+  height: 100dvh;
+  padding: min(2vmin, 1rem);
   background-color: #121212;
   overflow: hidden;
   display: flex;
@@ -28,11 +28,11 @@ body {
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  height: calc(100vh - 2rem);
+  height: calc(100dvh - 2rem);
   background-color: #242424;
   border-radius: 1rem;
-  padding: 2rem;
-  width: clamp(500px, 95vw, 1200px);
+  padding: min(4vmin, 2rem);
+  width: clamp(240px, 95vw, 1200px);
 }
 
 .btn {
@@ -57,11 +57,12 @@ body {
   height: 100%;
   font-size: 1.75rem;
   padding: 1rem;
-  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
+  font-family: inherit;
   border-radius: 0.5rem;
   background-color: #121212;
   color: #eeeeee;
   border: none;
+  transition: border-radius 200ms ease-in-out;
 }
 
 .search:hover {
@@ -74,10 +75,16 @@ body {
 
 .results {
   flex-grow: 0;
-  margin-top: 1rem;
   overflow-y: auto;
-  max-height: 300px;
+  max-height: 18dvh;
+  margin-top: 0.5rem;
   width: 100%;
+  background-color: #0005;
+  border-radius: 0.5rem;
+}
+
+.results:has(.search-result) {
+  min-height: 18dvh;
 }
 
 .search-result {
@@ -85,7 +92,7 @@ body {
   margin: 0.5rem;
   align-items: center;
   background-color: #000a;
-  padding: 1rem;
+  padding: clamp(0.25rem, 2vmin + 0.25rem, 1rem);
   border-radius: 0.5rem;
   cursor: pointer;
 }
@@ -97,11 +104,11 @@ body {
 .search-result img {
   height: "64px";
   aspect-ratio: 1;
-  border-radius: 0.5rem;
+  border-radius: 0.25rem;
 }
 
 .track-info {
-  margin-left: 1rem;
+  margin-left: clamp(0.25rem, 2vmin + 0.25rem, 1rem);
 }
 
 .track-title {
@@ -113,11 +120,8 @@ body {
   color: #bbb;
 }
 
-.track-artists span {
-  margin-right: 0.75rem;
-}
-
 .lyrics-wrapper {
+  /* Allow for dynamic, color changing background */
   --base-color: 340;
   --secondary-color: calc(var(--base-color) + 40);
   flex-grow: 1;
@@ -125,7 +129,7 @@ body {
   overflow-y: hidden;
   font-size: 1.25rem;
   line-height: 2rem;
-  padding: 2rem;
+  padding: clamp(0.75rem, 4vmin + 0.75rem, 2rem);
   padding-bottom: 5rem;
   text-align: center;
   background: linear-gradient(
@@ -133,7 +137,7 @@ body {
     hsl(var(--base-color), 60%, 50%, 80%)
   );
   border-radius: 2rem;
-  width: 90%;
+  width: 95%;
   text-shadow: 0 0 1rem #000a;
   transform: translateY(100%);
   transition: transform 200ms ease-in-out;
@@ -187,7 +191,20 @@ body {
 }
 
 @media (width < 770px) {
+  .track-title {
+    font-size: 1em;
+  }
+
+  .lyrics-wrapper {
+    font-size: 1.125rem;
+    line-height: 1.5rem;
+  }
+
   .lyrics {
     height: 88%;
+  }
+
+  .controls {
+    padding: 0.5rem 1rem;
   }
 }
